# witness

./: .gitignore  BACKLOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
examples/: README.md  deliberate_failure.py  form_fill.py  hn_top_story.py  intentional_failure.py  multi_tab.py
scripts/: build_viewer.py  build_viewer.sh  capture_viewer.py  record_demo.py  seed_demo.py
tests/: test_config.py  test_otel_bridge.py  test_pricing.py  test_redact.py  test_sdk.py  test_server.py  test_share.py  test_storage.py
viewer/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
viewer/src/: index.css  main.tsx  routeTree.gen.ts
viewer/src/components/: dom-diff.tsx  json-view.tsx  llm-calls-panel.tsx  screenshot-diff.tsx  timeline.tsx
viewer/src/lib/: api.ts  types.ts  utils.ts
viewer/src/routes/: __root.tsx  index.tsx  traces.$traceId.tsx
witness/: __init__.py  cli.py  config.py  otel_bridge.py  pricing.py  redact.py  sdk.py  server.py  share.py  storage.py
